fixed alignment issues

--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -31,7 +31,7 @@ body {
 
 .center_wrapper {
     text-align: center;
-    width: 900px;
+    width: 66%;
     margin: 0 auto;
     padding: 0px;
     
@@ -171,10 +171,11 @@ footer .footer_copyright {
 .vn_wrapper {
     display: flex;
     padding-bottom: 100px;
+    width: auto;
 }
 
 .vn_item {
-    width:33%;
+    width:35%;
     color: #ffffff;
     text-align: center;
     padding-left: 15px;
